<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="홈" />
        <item
            android:id="@+id/nav_character"
            android:icon="@drawable/dia"
            android:title="슈다" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/gear"
            android:title="설정" />

    <item
        android:title="기타">
        <menu>
            <item
                android:id="@+id/our"
                android:title="개발자 정보" />
            <item
                android:id="@+id/tutorial"
                android:title="사용 방법" />
            <item
                android:id="@+id/what"
                android:title="슈다는?" />
        </menu>
    </item>
    </group>
</menu>
